@@ -71,15 +71,27 @@ import jdk.test.lib.process.OutputAnalyzer;
  */
 
 /*
- * @test id=Z
- * @requires vm.gc.Z
+ * @test id=ZSinglegen
+ * @requires vm.gc.ZSinglegen
  * @summary Test of diagnostic command GC.heap_dump with gzipped output (Z GC)
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  *          java.compiler
  *          java.management
  *          jdk.internal.jvmstat/sun.jvmstat.monitor
- * @run main/othervm -XX:+UseZGC HeapDumpCompressedTest
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational HeapDumpCompressedTest
+ */
+
+/*
+ * @test id=ZGenerational
+ * @requires vm.gc.ZGenerational
+ * @summary Test of diagnostic command GC.heap_dump with gzipped output (Z GC)
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.compiler
+ *          java.management
+ *          jdk.internal.jvmstat/sun.jvmstat.monitor
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational HeapDumpCompressedTest
  */
 
 /*
